# app/Http/Controllers/Annotations/CRUDNotesAnnotationController.php
@@ -35,10 +35,6 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="200", description="OK"),
  * @OA\Response(response="404", description="Not Found"),
  * @OA\Response(response="500", description="Internal Server Error"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
- * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
  *     tags={"CRUD-Notes"},
@@ -56,10 +52,6 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="400", description="Bad Request"),
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
- * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\RequestBody(
@@ -81,7 +73,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\GET(
- *     path="/api/grades/1",
+ *     path="/api/grades/{id}",
  *     summary="Récuperer une note",
  *     description="",
  *         security={
@@ -90,9 +82,7 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="200", description="OK"),
  * @OA\Response(response="404", description="Not Found"),
  * @OA\Response(response="500", description="Internal Server Error"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
@@ -101,7 +91,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\PUT(
- *     path="/api/grades/1",
+ *     path="/api/grades/{id}",
  *     summary="Modifier une note",
  *     description="",
  *         security={
@@ -110,9 +100,7 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="200", description="OK"),
  * @OA\Response(response="404", description="Not Found"),
  * @OA\Response(response="500", description="Internal Server Error"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
@@ -135,7 +123,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\DELETE(
- *     path="/api/grades/1",
+ *     path="/api/grades/{id}",
  *     summary="Supprimer une note",
  *     description="",
  *         security={
@@ -145,9 +133,7 @@ namespace App\Http\Controllers\Annotations ;
  * @OA\Response(response="401", description="Unauthorized"),
  * @OA\Response(response="403", description="Forbidden"),
  * @OA\Response(response="404", description="Not Found"),
- *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
- * ),
- *     @OA\Parameter(in="path", name="password", required=false, @OA\Schema(type="string")
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
